==> MadueNice/libs/CANopenNode/CO_driver_STM32F4xx.c <==
#include "301/CO_driver.h"
#include "stm32f4xx_hal.h"
#include "main.h"
#include "can.h"
#include "print.h"
#define CO_CAN_PRINT 0x1u
#define CANID_MASK                              0x07FF  /*!< CAN standard ID mask */
#define FLAG_RTR                                0x8000  /*!< RTR flag, part of identifier */

void CO_CANsetNormalMode(CO_CANmodule_t *CANmodule) {
	/* Put CAN module in normal mode */
	if (CANmodule->CANptr != NULL
			&& HAL_CAN_Start(CANmodule->CANptr) == HAL_OK) {
		CANmodule->CANnormal = true;
	}
}

CO_ReturnError_t CO_CANmodule_init(CO_CANmodule_t *CANmodule,
		void *HALCanObject, CO_CANrx_t rxArray[], uint16_t rxSize,
		CO_CANtx_t txArray[], uint16_t txSize, uint16_t CANbitRate) {

	/* verify arguments */
	if (CANmodule == NULL || rxArray == NULL || txArray == NULL) {
		return CO_ERROR_ILLEGAL_ARGUMENT;
	}


	/* Hold CANModule variable */
	CANModule_local = CANmodule;

	CANmodule->CANptr = (CAN_HandleTypeDef*) HALCanObject;

	/* Configure object variables */
	CANmodule->rxArray = rxArray;
	CANmodule->rxSize = rxSize;
	CANmodule->txArray = txArray;
	CANmodule->txSize = txSize;
	CANmodule->CANerrorStatus = 0;
	CANmodule->CANnormal = false;
	CANmodule->useCANrxFilters = false; /* Do not use HW filters */
	CANmodule->bufferInhibitFlag = false;
	CANmodule->firstCANtxMessage = true;
	CANmodule->CANtxCount = 0U;
	CANmodule->errOld = 0U;

	/* Reset all variables */
	for (uint16_t i = 0U; i < rxSize; i++) {
		rxArray[i].ident = 0U;
		rxArray[i].mask = 0xFFFFU;
		rxArray[i].object = NULL;
		rxArray[i].CANrx_callback = NULL;
	}
	for (uint16_t i = 0U; i < txSize; i++) {
		txArray[i].bufferFull = false;
	}

	/***************************************/
	/* STM32F3 CAN related configuration */
	/***************************************/

	CO_CANmodule_disable(CANmodule);

//	HAL_CAN_MspDeInit(CANmodule->CANptr); // DeInit CAN MSP

	/* Set instance at the beginning */
	MX_CAN1_Init(); // Setup CAN based on CubeMX Configuration

	/*
	 * Configure global filter that is used as last check if message did not pass any of other filters:
	 *
	 * We do not rely on hardware filters in this example
	 * and are performing software filters instead
	 *
	 * Accept non-matching standard ID messages
	 * Reject non-matching extended ID messages
	 */
	/* Configure mask 0 so, that all messages with standard identifier are accepted */
	CAN_FilterTypeDef FilterConfig;
	FilterConfig.FilterBank = 0;
	FilterConfig.FilterMode = CAN_FILTERMODE_IDMASK;
	FilterConfig.FilterScale = CAN_FILTERSCALE_32BIT;
	FilterConfig.FilterIdHigh = 0x0;
	FilterConfig.FilterIdLow = 0x0;
	FilterConfig.FilterMaskIdHigh = 0x0;
	FilterConfig.FilterMaskIdLow = 0x0;
	FilterConfig.FilterFIFOAssignment = CAN_RX_FIFO0;
	FilterConfig.FilterActivation = ENABLE;
	FilterConfig.SlaveStartFilterBank = 14;

	if (HAL_CAN_ConfigFilter(CANmodule->CANptr, &FilterConfig)
					!= HAL_OK) {
		return CO_ERROR_ILLEGAL_ARGUMENT;
	}

	/* Enable notifications */
	/* Activate the CAN notification interrupts */
	if (HAL_CAN_ActivateNotification(CANmodule->CANptr,
	CAN_IT_RX_FIFO0_MSG_PENDING |
	CAN_IT_RX_FIFO1_MSG_PENDING |
	CAN_IT_TX_MAILBOX_EMPTY) != HAL_OK) {
		return CO_ERROR_ILLEGAL_ARGUMENT;
	}
	return CO_ERROR_NO;
}

void CO_CANmodule_disable(CO_CANmodule_t *CANmodule) {
	if (CANmodule != NULL && CANmodule->CANptr != NULL) {
		HAL_CAN_Stop(CANmodule->CANptr);
	}
}

CO_ReturnError_t CO_CANrxBufferInit(CO_CANmodule_t *CANmodule, uint16_t index,
		uint16_t ident, uint16_t mask, bool_t rtr, void *object,
		void (*CANrx_callback)(void *object, void *message)) {
	CO_ReturnError_t ret = CO_ERROR_NO;

	if (CANmodule != NULL && object != NULL && CANrx_callback != NULL
			&& index < CANmodule->rxSize) {
		CO_CANrx_t *buffer = &CANmodule->rxArray[index];

		/* Configure object variables */
		buffer->object = object;
		buffer->CANrx_callback = CANrx_callback;

		/*
		 * Configure global identifier, including RTR bit
		 *
		 * This is later used for RX operation match case
		 */
		buffer->ident = (ident & CANID_MASK) | (rtr ? FLAG_RTR : 0x00);
		buffer->mask = (mask & CANID_MASK) | FLAG_RTR;

		/* Set CAN hardware module filter and mask. */
		if (CANmodule->useCANrxFilters) {
			__NOP();
		}
	} else {
		ret = CO_ERROR_ILLEGAL_ARGUMENT;
	}

	return ret;
}

CO_CANtx_t*
CO_CANtxBufferInit(CO_CANmodule_t *CANmodule, uint16_t index, uint16_t ident,
		bool_t rtr, uint8_t noOfBytes, bool_t syncFlag) {
	CO_CANtx_t *buffer = NULL;

	if (CANmodule != NULL && index < CANmodule->txSize) {
		buffer = &CANmodule->txArray[index];

		/* CAN identifier, DLC and rtr, bit aligned with CAN module transmit buffer */
		buffer->ident = ((uint32_t) ident & CANID_MASK)
				| ((uint32_t) (rtr ? FLAG_RTR : 0x00));
		buffer->DLC = noOfBytes;
		buffer->bufferFull = false;
		buffer->syncFlag = syncFlag;
	}
	return buffer;
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer) {
	CO_ReturnError_t err = CO_ERROR_NO;

	/* Verify overflow */
	if (buffer->bufferFull) {
		if (!CANmodule->firstCANtxMessage) {
			/* don't set error, if bootup message is still on buffers */
			CANmodule->CANerrorStatus |= CO_CAN_ERRTX_OVERFLOW;
		}
		err = CO_ERROR_TX_OVERFLOW;
	}

	/*
	 * Send message to CAN network
	 *
	 * Lock interrupts for atomic operation
	 */
	CO_LOCK_CAN_SEND(CANmodule);
	if (prv_send_can_message(CANmodule, buffer)) {
		CANmodule->bufferInhibitFlag = buffer->syncFlag;
	} else {
		buffer->bufferFull = true;
		CANmodule->CANtxCount++;
	}
	CO_UNLOCK_CAN_SEND(CANmodule);

	return err;
}

void CO_CANclearPendingSyncPDOs(CO_CANmodule_t *CANmodule) {
	uint32_t tpdoDeleted = 0U;

	CO_LOCK_CAN_SEND(CANmodule);
	/* Abort message from CAN module, if there is synchronous TPDO.
	 * Take special care with this functionality. */
	if (/*messageIsOnCanBuffer && */CANmodule->bufferInhibitFlag) {
		/* clear TXREQ */
		CANmodule->bufferInhibitFlag = false;
		tpdoDeleted = 1U;
	}
	/* delete also pending synchronous TPDOs in TX buffers */
	if (CANmodule->CANtxCount > 0) {
		for (uint16_t i = CANmodule->txSize; i > 0U; --i) {
			if (CANmodule->txArray[i].bufferFull) {
				if (CANmodule->txArray[i].syncFlag) {
					CANmodule->txArray[i].bufferFull = false;
					CANmodule->CANtxCount--;
					tpdoDeleted = 2U;
				}
			}
		}
	}
	CO_UNLOCK_CAN_SEND(CANmodule);
	if (tpdoDeleted) {
		CANmodule->CANerrorStatus |= CO_CAN_ERRTX_PDO_LATE;
	}
}
